[workspace]
members = ["chuckle*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/trufflehq/chuckle"
keywords = ["discord", "trufflehq", "truffle", "youtube", "twitch"]
categories = ["database", "asynchronous"]
authors = [
    "Carter Himmel <carter@truffle.vip>"
]

[workspace.dependencies]
chuckle-gateway = { path = "./chuckle-gateway" }
chuckle-github = { path = "./chuckle-github" }
chuckle-http = { path = "./chuckle-http" }
chuckle-interactions = { path = "./chuckle-interactions", default-features = false }
chuckle-jobs = { path = "./chuckle-jobs" }
chuckle-util = { path = "./chuckle-util" }

anyhow = "1"
async-trait = "0.1"
axum = { version = "0.6", features = ["macros", "multipart"] }
chrono = "0.4"
hex = "0.4"
once_cell = "1"
redis = { version = "0.23.1", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
time = "0.3"
tracing = "0.1"
twilight-cache-inmemory = { version = "0.15", features = ["permission-calculator"] }
twilight-gateway = { version = "0.15", default-features = false, features = ["rustls-webpki-roots"] }
twilight-http = { version = "0.15", default-features = false, features = ["rustls-webpki-roots"] }
twilight-model = "0.15"
twilight-util = { version = "0.15", features = ["builder"] }
uuid = { version = "1", features = ["serde", "v4"] }
# zephyrus = { version = "0.10", features = ["bulk"] }
zephyrus = { git = "https://github.com/carterhimmel/zephyrus", branch = "master", features = ["bulk"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
