[workspace]
members = [
    "chuckle",
    "chuckle-gateway",
    "chuckle-github",
    "chuckle-http",
    "chuckle-interactions",
    "chuckle-jobs",
    "chuckle-util"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/trufflehq/chuckle"
keywords = ["discord", "trufflehq", "truffle", "youtube", "twitch"]
authors = [
    "Carter Himmel <carter@truffle.vip>"
]
homepage = "https://github.com/trufflehq/chuckle#readme"

[workspace.dependencies]
chuckle-gateway = { path = "./chuckle-gateway" }
chuckle-github = { path = "./chuckle-github" }
chuckle-http = { path = "./chuckle-http" }
chuckle-interactions = { path = "./chuckle-interactions", default-features = false }
chuckle-jobs = { path = "./chuckle-jobs" }
chuckle-util = { path = "./chuckle-util" }

anyhow = "1.0.91"
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["macros", "multipart"] }
chrono = "0.4.38"
hex = "0.4.3"
once_cell = "1.20.2"
redis = { version = "0.27.5", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.8.2", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
time = "0.3.36"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "json"] }
twilight-cache-inmemory = { version = "0.15.4", features = ["permission-calculator"] }
twilight-gateway = { version = "0.15.4", default-features = false, features = ["rustls-webpki-roots"] }
twilight-http = { version = "0.15.4", default-features = false, features = ["rustls-webpki-roots"] }
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
vesper = { version = "0.13.0", features = ["bulk"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
