[package]
name = "chuckle-gateway"
version = "0.1.0"
edition = "2021"


[dependencies]
# core dependencies
chuckle-interactions = { workspace = true }
chuckle-util = { workspace = true }

anyhow = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
twilight-gateway = { workspace = true }
twilight-model = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
