[package]
name = "chuckle-interactions"
description = "Logic for handling Discord interactions."
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chuckle-util = { workspace = true }
hex = { workspace = true }
ms = "0.1.1"
once_cell = { workspace = true }
rand = "0.8.5"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
indoc = "2"
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
twilight-cache-inmemory = { workspace = true }
twilight-model = { workspace = true }
twilight-util = { workspace = true }
uuid = { workspace = true }
url = "2"
zephyrus = { workspace = true }
itertools = "0.11.0"
