[package]
name = "chuckle-jobs"
description = "A job scheduler for Chuckle"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
chuckle-util = { workspace = true }

anyhow = { workspace = true }
clokwerk = "0.4"
sqlx = { workspace = true }
tokio = { workspace = true, features = ["time", "rt"] }
tracing = { workspace = true }
twilight-model = { workspace = true }
