[package]
name = "chuckle-util"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
zephyrus = { workspace = true }

# config
envy = { version = "0.4.2", optional = true }
serde = { workspace = true, optional = true }

# state
sqlx = { workspace = true }
time = { workspace = true }
twilight-cache-inmemory = { workspace = true }
twilight-http = { workspace = true }
twilight-model = { workspace = true }
uuid = { workspace = true }

[features]
default = ["config", "state"]
config = ["dep:envy", "dep:serde"]
state = ["config"]
