[package]
name = "chuckle-util"
description = "Utilities for Chuckle"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
zephyrus = { workspace = true }

# config
envy = { version = "0.4.2", optional = true }
serde = { workspace = true, optional = true }

# state
sqlx = { workspace = true }
time = { workspace = true }
twilight-cache-inmemory = { workspace = true }
twilight-http = { workspace = true }
twilight-model = { workspace = true }
uuid = { workspace = true }

[features]
default = ["config", "state"]
config = ["dep:envy", "dep:serde"]
state = ["config"]
