[package]
name = "chuckle"
description = "The primary Chuckle binary"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
chuckle-gateway = { workspace = true }
chuckle-github = { workspace = true }
chuckle-http = { workspace = true }
chuckle-interactions = { workspace = true }
chuckle-jobs = { workspace = true }
chuckle-util = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
